--- a/apps/package.json
+++ b/apps/package.json
@@ -6,19 +6,22 @@
     "build": "tsdown",
     "check-types": "tsc --noEmit",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch server/src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "zod": "^4.0.2",
-    "fastify": "^5.3.3",
-    "@fastify/cors": "^11.0.1"
+    "@fastify/cors": "^8.3.0",
+    "@prisma/client": "^6.12.0",
+    "async-mutex": "^0.5.0",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "prisma": "^6.12.0"
   },
   "devDependencies": {
+    "@types/node": "^22.13.11",
     "tsdown": "^0.12.9",
-    "typescript": "^5.8.2",
     "tsx": "^4.19.2",
-    "@types/node": "^22.13.11"
+    "typescript": "^5.8.2"
   }
 }
